--- a/Styles/home.css
+++ b/Styles/home.css
@@ -1,3 +1,10 @@
+#home {
+    height: 100%;
+    margin: 0 auto;
+    margin-top: -6.25rem;
+    margin-bottom: 0;
+}
+
 .hero {
     display: flex;
     flex-direction: column;
@@ -5,9 +12,10 @@
     justify-content: center;
     text-align: center;
     padding: 0;
+    width: 100vw;
 }
 
-.video-container {
+/* .video-container {
     position: relative;
     width: 100%;
     overflow: hidden;
@@ -24,16 +32,16 @@
     background: rgba(255, 255, 255, 0);
     z-index: 1;
     pointer-events: none;
-}
+} */
 
-/* .hero-video {
-    position: absolute;
+.hero-video {
+    position: relative;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     border: none;
-} */
+}
 
 video::-webkit-media-controls-start-playback-button {
     display: none;
@@ -73,11 +81,10 @@ video::-webkit-media-controls-start-playback-button {
     z-index: 1;
 }
 
-#menu,
-#home {
+#menu {
     margin: 0 auto;
     margin-top: -4rem;
-    margin-bottom: 4rem;
+    margin-bottom: 2rem;
 }
 
 .neon-nav {
